Manually fix test failures

--- a/tsconfig.angular.json
+++ b/tsconfig.angular.json
@@ -31,7 +31,7 @@
         "target": "ES2022",
         "module": "ES2022",
         "useDefineForClassFields": false,
-        "lib": ["ES2022", "dom"]
+        "lib": ["ES2022", "dom", "esnext.disposable"]
     },
     "angularCompilerOptions": {
         "enableI18nLegacyMessageIdFormat": false,
