--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "tslib": "2.8.1"
     },
     "devDependencies": {
+        "@angular-devkit/schematics": "21.1.2",
         "@angular-eslint/builder": "21.0.1",
         "@angular-eslint/eslint-plugin": "21.0.1",
         "@angular-eslint/eslint-plugin-template": "21.0.1",
@@ -48,11 +49,13 @@
         "@angular/build": "21.0.6",
         "@angular/cli": "21.0.6",
         "@angular/compiler-cli": "21.0.9",
+        "@schematics/angular": "21.1.2",
         "@types/file-saver-es": "2.0.1",
         "@types/node": "22.13.14",
         "@typescript-eslint/eslint-plugin": "8.16.0",
         "@typescript-eslint/parser": "8.16.0",
         "concurrently": "8.2.1",
+        "copyfiles": "2.4.1",
         "cross-env": "7.0.3",
         "eslint": "9.33.0",
         "eslint-plugin-depend": "1.2.0",
