Add @ppwcode/ng-sdk ng-add schematic that adds the ppwcode Angular SDK dependencies

--- a/projects/ppwcode/ng-sdk/package.json
+++ b/projects/ppwcode/ng-sdk/package.json
@@ -1,12 +1,24 @@
 {
   "name": "@ppwcode/ng-sdk",
   "version": "0.0.1",
+  "schematics": "./schematics/collection.json",
+  "scripts": {
+    "build": "tsc -p tsconfig.schematics.json",
+    "postbuild": "copyfiles schematics/*/schema.json schematics/*/files/** schematics/collection.json ../../../dist/ppwcode/ng-sdk"
+  },
   "peerDependencies": {
     "@angular/common": "^21.0.0",
     "@angular/core": "^21.0.0"
   },
+  "devDependencies": {
+    "copyfiles": "file:../../../node_modules/copyfiles",
+    "typescript": "file:../../../node_modules/typescript"
+  },
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "ng-add": {
+    "save": "devDependencies"
+  }
 }
