--- a/projects/ppwcode/ng-sdk/package.json
+++ b/projects/ppwcode/ng-sdk/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@ppwcode/ng-sdk",
   "version": "0.0.1",
+  "repository": {
+    "url": "https://github.com/peopleware/angular-sdk"
+  },
   "schematics": "./schematics/collection.json",
   "scripts": {
     "build": "tsc -p tsconfig.schematics.json",
